--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.5",
     "debug": "~4.3.1",
     "express": "~4.17.1",
+    "express-ws": "^5.0.2",
     "http-errors": "~1.8.0",
     "morgan": "~1.10.0",
     "pug": "^3.0.2"
